<resources>
    <string name="app_name">Royal Truss</string>
    <string name="btn_login">Login</string>
    <string name="password">Password</string>
    <string name="input_username">Username</string>
    <string name="account_wrong">Username atau password salah!</string>
    <string name="tv_not_data">Belum ada data yang terdaftar</string>
    <string name="tv_product_name">Product Name</string>
    <string name="tv_price">Rp. 1.000.000</string>
    <string name="tv_stock_value">Stok: 0</string>
    <string name="tv_total_stock">Jumlah: 0</string>
    <string name="layout_product">Nama Produk</string>
    <string name="zero">0</string>
    <string name="tv_percent">%</string>
    <string name="btn_min">-</string>
    <string name="btn_add">Tambahkan</string>
    <string name="tv_stock">0</string>
    <string name="btn_plus">+</string>
    <string name="logout_menu">Logout</string>
    <string name="cart_menu">Keranjang</string>
    <string name="total_harga">Total Harga</string>
    <string name="no_data">..........</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="btn_pay">Konfirmasi</string>
    <string name="tv_not_cart">Belum ada barang yang ditambahkan</string>
    <string name="btn_confirmation">Hitung</string>
    <string name="print_report">Cetak Laporan</string>
    <string name="btn_invoice">Cetak Invoice</string>
    <string name="phone">Nomor Telepon</string>
    <string name="input_customer">Nama Pelanggan</string>
    <string name="layout_discount">Diskon</string>
    <string name="btn_edit_discount">Ubah</string>
    <string name="tv_discount">Diskon</string>
    <string name="txt_discount">Diskon</string>
    <string name="discount">0%</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="product_list">Daftar Produk</string>
    <string name="sales">Penjualan</string>
    <string name="purchase">Pembelian</string>
    <string name="tv_no_order">Belum ada pembeli</string>
    <string name="input_product">Nama Barang</string>
    <string name="btn_save">Simpan</string>
    <string name="input_price">Harga Barang</string>
    <string name="input_total_product">Jumlah Barang</string>
    <string name="input_supplier_name">Nama Pemasok</string>
    <string name="tv_supplier_name">Pemasok:</string>
    <string name="tv_supplier_phone">Tlp Pemasok:</string>
    <string name="tv_date">Tanggal: 06–08–1998</string>
    <string name="no_sales">Belum ada penjualan</string>
    <string name="no_purchase">Belum ada pembelian</string>
    <string name="customer_name">Nama:</string>
    <string name="tv_phone">Nomor Telepon:</string>
    <string name="tv_datetime">Tanggal :</string>
    <string name="nodata">..........</string>
    <string name="input_phone">No Tlp Pemasok</string>
    <string name="other_costs">Pengeluaran Lainnya</string>
    <string name="tv_information">Keterangan</string>
    <string name="no_costs">Belum ada pengeluaran</string>
    <string name="tv_rp">Rp. </string>
    <string name="layout_information">Keterangan</string>
    <string name="cost_price">Nominal</string>
    <string name="layout_price">Harga</string>
    <string name="btn_edit">Ubah</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Hapus</string>
    <string name="input_information">Keterangan</string>
</resources>