<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_product"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="marquee"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/tv_product_name"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/img_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_product" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_min"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/btn_min"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_plus"
            app:layout_constraintEnd_toStartOf="@+id/tv_stock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirmation"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:textSize="13sp"
            app:cornerRadius="@dimen/btn_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_min"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_stock"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="35sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/btn_plus"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_stock"
            app:layout_constraintTop_toBottomOf="@+id/tv_stock_value" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/tv_price"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_product_name"
            app:layout_constraintStart_toStartOf="@+id/tv_product_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_stock_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tv_stock_value"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_price"
            app:layout_constraintStart_toStartOf="@+id/tv_price"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_stock_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_product_name"
            app:srcCompat="@drawable/ic_menu_overflow" />

        <LinearLayout
            android:id="@+id/ly_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_circle"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_discount"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>