<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_edit"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/btn_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_price"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/input_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_discount"
        app:layout_constraintStart_toEndOf="@+id/tv_rp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/txt_discount"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_discount"
        app:layout_constraintEnd_toStartOf="@+id/input_discount"
        app:layout_constraintTop_toTopOf="@+id/input_discount" />

    <EditText
        android:id="@+id/input_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/zero"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_price"
        app:layout_constraintEnd_toStartOf="@+id/tv_percent"
        app:layout_constraintTop_toTopOf="@+id/input_price"
        tools:ignore="LabelFor" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_percent"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_discount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_discount" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_rp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_rp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/input_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_price" />

</androidx.constraintlayout.widget.ConstraintLayout>